Added README to NuGet Packages

--- a/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
+++ b/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
@@ -13,6 +13,7 @@
     <PackageId>Microsoft.AspNetCore.Datasync</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageTags>microsoft aspnetcore cloud datasync webapi</PackageTags>
     <ProductName>Microsoft.AspNetCore.Datasync</ProductName>
@@ -20,6 +21,9 @@
     <RootNamespace>Microsoft.AspNetCore.Datasync</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
