--- a/sdk/dotnet/templates/DatasyncTemplates.csproj
+++ b/sdk/dotnet/templates/DatasyncTemplates.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <PackageType>Template</PackageType>
-        <PackageId>Microsoft.AspNetCore.Datasync.Template.CSharp</PackageId>
-        <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps</PackageProjectUrl>
         <Authors>Microsoft</Authors>
         <Company>Microsoft</Company>
         <LicenseUrl>https://github.com/Azure/azure-mobile-apps/blob/main/LICENSE.txt</LicenseUrl>
-        <ProjectUrl>https://github.com/azure/azure-mobile-apps</ProjectUrl>
+        <PackageId>Microsoft.AspNetCore.Datasync.Template.CSharp</PackageId>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Title>ASP.NET Core Datasync Templates</Title>
-        <Description>Templates to use when creating ASP.NET Core datasync applications.</Description>
+        <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps</PackageProjectUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         <PackageTags>dotnet-new;templates;aspnetcore;datasync</PackageTags>
+        <PackageType>Template</PackageType>
+        <ProjectUrl>https://github.com/azure/azure-mobile-apps</ProjectUrl>
+        <Title>ASP.NET Core Datasync Templates</Title>
+        <Description>Templates to use when creating ASP.NET Core datasync applications.</Description>
         <RepositoryUrl>https://github.com/Azure/azure-mobile-apps</RepositoryUrl>
         <TargetFramework>net5</TargetFramework>
         <IncludeContentInPack>true</IncludeContentInPack>
@@ -19,6 +20,7 @@
         <ContentTargetFolders>content</ContentTargetFolders>
     </PropertyGroup>
     <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\" />
         <Content Include="Template.DatasyncServer\**" Exclude="Template.DatasyncServer\**\*.template" />
         <Compile Remove="**\*" />
     </ItemGroup>
