--- a/sdk/dotnet/src/Microsoft.AspNetCore.Datasync.EFCore/Microsoft.AspNetCore.Datasync.EFCore.csproj
+++ b/sdk/dotnet/src/Microsoft.AspNetCore.Datasync.EFCore/Microsoft.AspNetCore.Datasync.EFCore.csproj
@@ -13,6 +13,7 @@
     <PackageId>Microsoft.AspNetCore.Datasync.EFCore</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageTags>microsoft aspnetcore cloud datasync webapi</PackageTags>
     <ProductName>Microsoft.AspNetCore.Datasync.EFCore</ProductName>
@@ -20,6 +21,9 @@
     <RootNamespace>Microsoft.AspNetCore.Datasync.EFCore</RootNamespace>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
   </ItemGroup>
