--- a/sdk/dotnet/src/Microsoft.AspNetCore.Datasync.InMemory/Microsoft.AspNetCore.Datasync.InMemory.csproj
+++ b/sdk/dotnet/src/Microsoft.AspNetCore.Datasync.InMemory/Microsoft.AspNetCore.Datasync.InMemory.csproj
@@ -1,25 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <AssemblyName>Microsoft.AspNetCore.Datasync.InMemory</AssemblyName>
-    <Authors>Microsoft</Authors>
-    <Company>Microsoft</Company>
-    <Copyright>&#169; Microsoft Corporation. All rights reserved.</Copyright>
     <Description>An in-memory repository for use with the ASP.NET Core Datasync framework.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <IconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</IconUrl>
     <LangVersion>9.0</LangVersion>
-    <LicenseUrl>https://github.com/Azure/azure-mobile-apps/blob/main/LICENSE.txt</LicenseUrl>
-    <NeutralLanguage>en</NeutralLanguage>
     <PackageId>Microsoft.AspNetCore.Datasync.InMemory</PackageId>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps</PackageProjectUrl>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageTags>microsoft aspnetcore cloud datasync webapi</PackageTags>
+    <PackageTags>microsoft;aspnetcore;cloud;datasync;webapi</PackageTags>
     <ProductName>Microsoft.AspNetCore.Datasync.InMemory</ProductName>
-    <RepositoryUrl>https://github.com/Azure/azure-mobile-apps</RepositoryUrl>
     <RootNamespace>Microsoft.AspNetCore.Datasync.InMemory</RootNamespace>
     <TargetFramework>net5</TargetFramework>
   </PropertyGroup>
+  
+  <Import Project="..\..\Shared.Build.props" /> 
+
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.AspNetCore.Datasync\Microsoft.AspNetCore.Datasync.csproj" />
   </ItemGroup>
