--- a/sdk/dotnet/templates/Template.DatasyncServer/appsettings.json
+++ b/sdk/dotnet/templates/Template.DatasyncServer/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "AppDbContext": "Server=(localdb)\\mssqllocaldb;Database=TodoItemsSample;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TodoItemsSample;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
