Move interfaces and enum to Abstractions

--- a/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
+++ b/sdk/dotnet/src/Microsoft.AspNetCore.Datasync/Microsoft.AspNetCore.Datasync.csproj
@@ -26,4 +26,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Microsoft.AspNetCore.Datasync.Abstractions\Microsoft.AspNetCore.Datasync.Abstractions.csproj" />
+  </ItemGroup>
 </Project>
