--- a/sdk/dotnet/test/Datasync.Webservice/Datasync.Webservice.csproj
+++ b/sdk/dotnet/test/Datasync.Webservice/Datasync.Webservice.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>10.0</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
