(#261) Transitioned patching tests (need to fix errors)

--- a/sdk/dotnet/test/Datasync.Common.Test/Datasync.Common.Test.csproj
+++ b/sdk/dotnet/test/Datasync.Common.Test/Datasync.Common.Test.csproj
@@ -13,5 +13,6 @@
     <ProjectReference Include="..\..\src\Microsoft.AspNetCore.Datasync.EFCore\Microsoft.AspNetCore.Datasync.EFCore.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.AspNetCore.Datasync.InMemory\Microsoft.AspNetCore.Datasync.InMemory.csproj" />
     <ProjectReference Include="..\..\src\Microsoft.AspNetCore.Datasync\Microsoft.AspNetCore.Datasync.csproj" />
+    <ProjectReference Include="..\..\src\Microsoft.Datasync.Client\Microsoft.Datasync.Client.csproj" />
   </ItemGroup>
 </Project>
