Switch to MAUI-DevDiv build pool.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,7 @@ pr:
   - main
 
 pool:
-  name: 'AzurePipelines-EO'
-  vmImage: 'AzurePipelinesWindows2022compliant'
+  name: 'MAUI-DevDiv'
 
 variables:
   buildConfiguration: 'Release'
