feat(offline): First pass of the purge action.

--- a/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
+++ b/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
@@ -56,6 +56,12 @@
   <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
     <Compile Include="Platforms\netstandard\*.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Offline\Actions\PurgeAction.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Offline\Actions\PurgeAction.cs" />
+  </ItemGroup>
 
   <!-- Common package requirements -->
   <ItemGroup>
