feat(offline): Added OData to LINQ in the in-memory store so I can do paging and deletions via query description.

--- a/sdk/dotnet/src/Microsoft.Datasync.Client.InMemoryStore/Microsoft.Datasync.Client.InMemoryStore.csproj
+++ b/sdk/dotnet/src/Microsoft.Datasync.Client.InMemoryStore/Microsoft.Datasync.Client.InMemoryStore.csproj
@@ -26,6 +26,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Community.OData.Linq" Version="2.1.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Microsoft.Datasync.Client\Microsoft.Datasync.Client.csproj" />
 	</ItemGroup>
 </Project>
