--- a/samples/TodoApp/TodoAppService.NET6/TodoAppService.NET6.csproj
+++ b/samples/TodoApp/TodoAppService.NET6/TodoAppService.NET6.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Datasync" Version="5.0.0-beta.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Datasync.EFCore" Version="5.0.0-beta.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0-rc.1.21452.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0-rc.1.21452.10">
+    <PackageReference Include="Microsoft.AspNetCore.Datasync" Version="5.0.0-beta.12" />
+    <PackageReference Include="Microsoft.AspNetCore.Datasync.EFCore" Version="5.0.0-beta.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0-preview.2.22153.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0-preview.2.22153.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
