--- a/samples/TodoApp/TodoApp.Android/Properties/AndroidManifest.xml
+++ b/samples/TodoApp/TodoApp.Android/Properties/AndroidManifest.xml
@@ -3,8 +3,15 @@
           android:versionCode="1" 
           android:versionName="1.0" 
           package="com.companyname.todoapp.android">
-  <uses-sdk android:minSdkVersion="29" android:targetSdkVersion="31" />
-  <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
-  </application>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-sdk android:minSdkVersion="29" android:targetSdkVersion="31" />
+    <application 
+        android:allowBackup="false" 
+        android:icon="@mipmap/ic_launcher" 
+        android:label="@string/app_name" 
+        android:roundIcon="@mipmap/ic_launcher_round" 
+        android:supportsRtl="true" 
+        android:theme="@style/AppTheme">
+    </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
