--- a/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
+++ b/sdk/dotnet/src/Microsoft.Datasync.Client/Microsoft.Datasync.Client.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.44">
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-windows10.0.19041.0;netstandard2.0;monoandroid12.0;xamarin.ios10</TargetFrameworks>
@@ -69,6 +69,7 @@
 	</PropertyGroup>
 	<ItemGroup Condition="$(TargetFramework.StartsWith('uap10.0'))">
 		<Compile Include="Platforms\uap\*.cs" />
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.StartsWith('net6.0-windows'))">
