Set working directory for MAUI restore

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,7 @@ stages:
           - pwsh: |
               dotnet workload restore
             displayName: Restore MAUI Workloads
+            workingDirectory: $(netSdkPath)
 
           - task: MSBuild@1
             displayName: 'Build SDK'
