--- a/samples/TodoApp/TodoApp.Data/TodoApp.Data.csproj
+++ b/samples/TodoApp/TodoApp.Data/TodoApp.Data.csproj
@@ -8,6 +8,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Datasync.Client" Version="5.0.3" />
 		<PackageReference Include="System.Linq.Async" Version="6.0.1" />
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
