--- a/samples/TodoApp/TodoApp.WinUI/TodoApp.WinUI.csproj
+++ b/samples/TodoApp/TodoApp.WinUI/TodoApp.WinUI.csproj
@@ -12,8 +12,7 @@
     <EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Assets\additem.png" />
-    <None Remove="Assets\refresh.png" />
+
   </ItemGroup>
 
   <ItemGroup>
@@ -24,10 +23,12 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="Assets\additem.png" />
+    <Content Include="Assets\refresh.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.0" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.3" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.194" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
