--- a/samples/TodoApp/TodoApp.Android/TodoApp.Android.csproj
+++ b/samples/TodoApp/TodoApp.Android/TodoApp.Android.csproj
@@ -105,6 +105,7 @@
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.4.2.1" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.6.1.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TodoApp.Data\TodoApp.Data.csproj">
