--- a/samples/TodoApp/TodoApp.Forms/TodoApp.Forms.Android/TodoApp.Forms.Android.csproj
+++ b/samples/TodoApp/TodoApp.Forms/TodoApp.Forms.Android/TodoApp.Forms.Android.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
