--- a/samples/TodoApp/TodoApp.Forms/TodoApp.Forms.iOS/TodoApp.Forms.iOS.csproj
+++ b/samples/TodoApp/TodoApp.Forms/TodoApp.Forms.iOS/TodoApp.Forms.iOS.csproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
