--- a/samples/TodoApp/TodoApp.iOS/TodoApp.iOS.csproj
+++ b/samples/TodoApp/TodoApp.iOS/TodoApp.iOS.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
