--- a/samples/TodoApp/TodoApp.UWP/TodoApp.UWP.csproj
+++ b/samples/TodoApp/TodoApp.UWP/TodoApp.UWP.csproj
@@ -152,8 +152,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Datasync.Client" Version="5.0.4" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13" />
+    <PackageReference Include="Microsoft.Datasync.Client" Version="[5.0.5]" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.14" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI" Version="7.1.2" />
   </ItemGroup>
   <ItemGroup>
