Added additem/refresh icons

--- a/samples/TodoApp/TodoApp.AvaloniaUI/TodoApp.AvaloniaUI.csproj
+++ b/samples/TodoApp/TodoApp.AvaloniaUI/TodoApp.AvaloniaUI.csproj
@@ -11,6 +11,8 @@
     <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
+    <None Remove="Assets\additem.png" />
+    <None Remove="Assets\refresh.png" />
   </ItemGroup>
   <ItemGroup>
     <!--This helps with theme dll-s trimming.
