--- a/sdk/typescript/ms-datasync-client/.gitignore
+++ b/sdk/typescript/ms-datasync-client/.gitignore
@@ -202,6 +202,7 @@ sdk/cosmosdb/cosmos/lib
 *.test.js.map
 *lintReport.html
 tsdoc-metadata.json
+temp
 
 # autorest generated files
 swagger/*.json
