--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -20,22 +20,41 @@
     "README.md",
     "../../../LICENSE.txt"
   ],
+  "types": "types/latest/ms-datasync-library.d.ts",
+  "typesVersions": {
+    "<3.6": {
+      "*": [
+        "types/3.1/ms-datasync-library.d.ts"
+      ]
+    }
+  },
   "scripts": {
-    "build": "run-s lint build:src build:types",
+    "build": "run-s lint build:src build:api build:types",
+    "build:api": "api-extractor run --local",
     "build:src": "tsc -p .",
     "build:types": "downlevel-dts types/latest/ types/3.1/",
     "clean": "rimraf dist dist-esm temp types *.tgz *.log",
-    "lint": "eslint src test --ext .ts"
+    "lint": "eslint src test --ext .ts",
+    "pretest": "run-s build",
+    "test": "run-s test:node",
+    "test:node": "mocha"
   },
   "dependencies": {
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "@microsoft/api-extractor": "^7.28.4",
+    "chai": "^4.3.6",
+    "downlevel-dts": "^0.10.0",
     "eslint": "^8.19.0",
+    "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
 }
