--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -37,22 +37,23 @@
     "lint": "eslint src test --ext .ts",
     "pretest": "run-s build",
     "test": "run-s test:node",
-    "test:node": "mocha"
+    "test:node": "nyc --reporter=text mocha"
   },
   "dependencies": {
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.28.4",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "@microsoft/api-extractor": "^7.28.4",
     "chai": "^4.3.6",
     "downlevel-dts": "^0.10.0",
     "eslint": "^8.19.0",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
