--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -40,6 +40,7 @@
     "test:node": "nyc --all --reporter=text mocha"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
