--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -54,7 +54,12 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "downlevel-dts": "^0.10.0",
+    "electron": "^19.0.8",
     "eslint": "^8.19.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-mocha": "^2.0.1",
+    "karma-typescript": "^5.5.3",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
