--- a/sdk/typescript/ms-datasync-client/package.json
+++ b/sdk/typescript/ms-datasync-client/package.json
@@ -36,11 +36,14 @@
     "clean": "rimraf dist dist-esm temp types *.tgz *.log",
     "lint": "eslint src test --ext .ts",
     "pretest": "run-s build",
-    "test": "run-s test:node",
-    "test:node": "nyc --all --reporter=text mocha"
+    "test": "run-s test:node test:browser test:coverage",
+    "test:browser": "karma start --single-run=true",
+    "test:coverage": "nyc report --reporter text",
+    "test:node": "nyc --reporter none mocha"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "cross-fetch": "^3.1.5",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
@@ -54,11 +57,11 @@
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "downlevel-dts": "^0.10.0",
-    "electron": "^19.0.8",
     "eslint": "^8.19.0",
     "karma": "^6.4.0",
     "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.8",
     "karma-typescript": "^5.5.3",
     "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
