config store / service client work

--- a/sdk/typescript/ms-datasync-client/tsconfig.json
+++ b/sdk/typescript/ms-datasync-client/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "outDir": "./dist-esm",
         "declarationDir": "./types",
+        "resolveJsonModule": true,
         "paths": {
             "ms-datasync-client": [ "./src/index" ]
         }
